// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownItem /> prop className should match snapshot when class name test is passed 1`] = `
<DocumentFragment>
  <li
    class="DropdownStyle__DropdownItemWrapper-sc-1sc3c6h-4 gWcQjq test"
  >
    Product Manager
  </li>
</DocumentFragment>
`;

exports[`<DropdownItem /> prop className should match snapshot when class name undefined is passed 1`] = `
<DocumentFragment>
  <li
    class="DropdownStyle__DropdownItemWrapper-sc-1sc3c6h-4 gWcQjq"
  >
    Product Manager
  </li>
</DocumentFragment>
`;
